update with python 2.7

--- a/.github/workflows/roboticarm.yml
+++ b/.github/workflows/roboticarm.yml
@@ -1,19 +1,18 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: RoboticArm
+name: stereovision
 
 on:
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-
+    branches: [ stereovision ]
 jobs:
   build:
 
     runs-on: ubuntu-latest
-
+    strategy:
+        matrix:
+          python-version: ["2.7", "3.6"]
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python 3.6
@@ -29,8 +28,11 @@ jobs:
         pip install tensorflow
         pip install keras
         pip install pyusb
-        
+        pip install stereovision
+        pip install matplotlib
+        pip install opencv-python==2.3.0
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
@@ -40,3 +42,5 @@ jobs:
     - name: Test with pytest
       run: |
           pytest
+
+    - uses: actions/checkout@v2
