--- a/.github/workflows/roboticarm.yml
+++ b/.github/workflows/roboticarm.yml
@@ -30,7 +30,7 @@ jobs:
         pip install pyusb
         pip install stereovision
         pip install matplotlib
-        pip install opencv-python
+        pip install opencv-python==3.4.0.14
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
 #    - name: Lint with flake8
