create new folder for stereovision module may be this time it will be work

--- a/.github/workflows/roboticarm.yml
+++ b/.github/workflows/roboticarm.yml
@@ -26,11 +26,7 @@ jobs:
         pip install numpy
         pip install stereovision
         pip install opencv-python==3.4.0.14
-        pip install flake8 pytest
-        pip install Pillow
-        pip install tensorflow
-        pip install keras
-        pip install pyusb
+        pip install pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
 #    - name: Lint with flake8
@@ -41,4 +37,4 @@ jobs:
 #        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
-          pytest --ignore=test_arduino_raspberry_communication --ignore==test_integrate --ignore==test_system
+          pytest test/stereovision_module
