--- a/.github/workflows/roboticarm.yml
+++ b/.github/workflows/roboticarm.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   build:
-    runs-on: windows-2016
+    runs-on: ubuntu-latest
     strategy:
         matrix:
           python-version: ["2.7"]
